entity_macros/tests/ui/derive/ent/missing-type-for-edge-attr-with-no-inner.stderr
error: Unexpected meta-item format `word`
  --> $DIR/missing-type-for-edge-attr-with-no-inner.rs:17:11
   |
17 |     #[ent(edge)]
   |           ^^^^
